# wet-crab

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README  build.rs  patch.txt
scripts/: build.dev.py  build.prod.linux.py  build.prod.windows.py  build.py  pack_gltf.py
src/: index.rs  lib.rs  main.rs  vertex.glsl
src/assets/: fragment.glsl  vertex.glsl
src/assets/blend/: Untitled.blend  Untitled.blend1  blockout_platform.blend  blockout_platform.blend1  chair.blend  chair.blend1
src/assets/meshes/: Untitled.blend  Untitled.blend1  blockout_platform.gltf  chair.gltf  guy.gltf
src/assets/scenes/: test_world.json
src/assets/shaders/: debug_shader.frag  debug_shader.vert  fragment.glsl  fragment_animated.glsl  fragment_box.glsl  fragment_outline.glsl  fragment_static.glsl  vertex.glsl  vertex_animated.glsl  vertex_box.glsl  vertex_capsule.glsl  vertex_cylinder.glsl  vertex_outline_animated.glsl  vertex_outline_static.glsl  vertex_sphere.glsl  vertex_static.glsl  vertex_wireframe.glsl
src/engine/: debug.rs  mod.rs
src/engine/components/: AnimatedObject3D.rs  Animator.rs  Camera.rs  Collider.rs  Material.rs  Mesh.rs  Object3D.rs  SharedComponents.rs  Skeleton.rs  StaticObject3D.rs  System.rs  Tranform.rs  Transform.rs  animated_object3d.rs  animation_state.rs  animator.rs  camera.rs  collider.rs  component_trait.rs  component_types.rs  material.rs  mesh.rs  metadata.rs  mod.rs  rigid_body.rs  shapes.rs  shared_components.rs  skeleton.rs  static_object3d.rs  system.rs  transform.rs
src/engine/editor_ui/: input_manager.rs  main.slint  mod.rs
src/game/: mod.rs
(+77 files in other folders)
