[package]
name = "runst-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
gltf = "1.4"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
paste = "1"
bytemuck = "1.23.1"
tokio = { version = "1", features = ["full"] }
glow = "0.16.0"
image = { version = "0.24", default-features = false, features = ["png"] }
dashmap = "5.5"

# Window management and OpenGL context
winit = "0.30.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"

# Slint UI integration
slint = { version = "~1.12", features = ["unstable-winit-030", "backend-winit"] }
i-slint-backend-winit = "=1.12"
gl = "0.14"

[build-dependencies]
slint-build = "1.12"
